--- a/Thesis_Report/usiinf-masterthesis-sample.tex
+++ b/Thesis_Report/usiinf-masterthesis-sample.tex
@@ -1298,20 +1298,20 @@ As before, we obtain the average number of solutions for each city number, graph
 \end{figure}
 \clearpage
 \section{Solution results}\label{sec:sol_res}
-Figures \ref{fig:boxplot_2_to_5} -- \ref{fig:boxplot_15_to_40} convey the distribution of the total cost, land usage, and health impact obtained for each average city count, graph, and algorithm seed. Figure \ref{fig:boxplot_2_to_5} shows this distribution for small-scale problems, from two to five average cities. Figure \ref{fig:boxplot_6_to_10} illustrates the distributions for medium-sized graphs of six to ten cities. Finally, figure \ref{fig:boxplot_15_to_30} displays the distributions for large-scale graphs of sizes $15$ to $30$ average cities, which use all evolutionary algorithms. For $40$ cities, we display two versions in figure \ref{fig:boxplot_40}: the original version that uses all the evolutionary algorithms solutions and a modified version that removes the C-TAEA algorithm.
+Figures \ref{fig:boxplot_2_to_5} -- \ref{fig:boxplot_15_to_40} convey the distribution of the total cost, land usage, and health impact obtained for each average city count, graph, and algorithm seed. Figure \ref{fig:boxplot_2_to_5} shows this distribution for small-scale problems, from two to five average cities. Figure \ref{fig:boxplot_6_to_10} illustrates the distributions for medium-sized graphs of six to ten cities. Finally, figure \ref{fig:boxplot_15_to_40} displays the distributions for large-scale graphs of sizes $15$ to $40$ average cities, which use all evolutionary algorithms.
 \\\\
 For all the boxplots, the straight line shows the median value of the objective solutions, and the dotted line displays the mean value. Furthermore, three axes exist for each city plot, one the total cost ($f_c$) given in Swiss francs (CHF). The average land use stress ($f_u$), calculated by using equation \ref{ratio}, and the total public health impact ($f_h$) that uses DALYs.
 \\\\
-In figure \ref{fig:2_cities}, we do not see many variations in the solutions obtained for all algorithms. Furthermore, the means of the cost objective are very similar, and the medians are on the same level. The CPLEX branch and cut has the lowest interquartile range (IQR) for this objective, the highest minimum value, and the lowest maximum value. For the land use objective, the spread of the solutions is very similar, and the interquartile ranges do not differ much. All solutions found the same minimum value in the public health impact objective. However, the branch and cut algorithm again finds the lowest maximum value. For all objectives, we do not see any outliers.
+In figure \ref{fig:2_cities}, we do not see many variations in the solutions obtained for all algorithms. Furthermore, the means of the cost objective are very similar, and the medians are on the same level. For the land use objective, the spread of the solutions is very similar, and the interquartile ranges do not differ much. All solutions found the same minimum value in all the objectives. 
 \\\\
-In figure \ref{fig:3_cities}, we already see a vast difference compared with \ref{fig:2_cities}. The first very striking event is that the branch and cut algorithm on the cost and land use objective shows a meagre IQR, which means that the spread of the solutions is also shallow. In addition, the C-TAEA algorithm also has a low IQR for the land usage objective. U-NSGA-III finds the highest valued outliers and also the highest amount of upper quartile outliers. For the public health impact, all algorithms show a minimal IQR. The branch and cut algorithm has the lowest mean for all solutions for the total cost and the highest for land use and health impact.
-Figure \ref{fig:5_cities} is very similar to figure \ref{fig:3_cities}, with a very limited IQR for the cost and land use objectives. 
+In figure \ref{fig:3_cities}, we already see a vast difference compared with \ref{fig:2_cities}. The first very striking event is that the branch and cut algorithm on the cost and land use objective shows a meagre IQR, which means that the spread of the solutions is also shallow. In addition, the NSGA-II algorithm also has a low IQR for the land usage objective. C-TAEA finds the highest valued outliers and also the highest IQR. For the cost objective, all algorithms show a minimal IQR. The branch and cut algorithm has the lowest mean for the health impact objective.
+Figure \ref{fig:5_cities} is very similar to figure \ref{fig:3_cities}, with a very limited IQR for land use objectives and branch and cut having the lowest IQR in the cost objective. 
 \\\\
-For figures \ref{fig:4_cities}, the branch and cut algorithm obtains an extensive IQR for the cost objective, which is very similar to the U-NSGA-III algorithm. However, with the benefit of finding lower-cost solutions compared to U-NSGA-III. In the land use objective, the branch and cut has a limited range with no upper $25\%$ and lower $25\%$ of values existing. On the other hand, the evolutionary algorithms are very similar in achieving high interquartile ranges.
+For figures \ref{fig:4_cities}, the branch and cut algorithm obtains the lowest IQR for the cost and health impact objectives. In the land use objective, the branch and cut has a limited range with no upper $25\%$ and lower $25\%$ of values existing. On the other hand, the evolutionary algorithms are very similar in achieving high interquartile ranges.
 \\\\
-When looking into the medium-sized solutions in figure \ref{fig:boxplot_6_to_10}, we see that the interquartile ranges start to differ a lot with the C-TAEA algorithm achieving an immense IQR for the land use objective in figures \ref{fig:6_cities}, \ref{fig:7_cities}, and \ref{fig:9_cities}. The evolutionary algorithms obtain a very high spread of solutions. However, they also obtain many more outliers than the branch and cut algorithm. For example, in figure \ref{fig:9_cities}, in the land use objective, the AGE-MOEA, U-NSGA-III and NSGA-III algorithms find many outliers with AGE-MOEA finding a total of six outliers with a low spread of solutions. For figure \ref{fig:10_cities}, all evolutionary algorithms find a higher spread of solutions or a lower value than the branch and cut algorithm.
+When looking into the medium-sized solutions in figure \ref{fig:boxplot_6_to_10}, we see that the interquartile ranges start to differ a lot with the C-TAEA algorithm achieving an immense IQR for the land use objective in figures \ref{fig:6_cities}, \ref{fig:7_cities}, and \ref{fig:9_cities}. The evolutionary algorithms obtain a very high spread of solutions. However, they also obtain many more outliers than the branch and cut algorithm. For example, in figure \ref{fig:9_cities}, in the land use objective, the NSGA-II, U-NSGA-III and NSGA-III algorithms find many outliers with NSGA-II and U-NSGA-III finding a total of six outliers with a low spread of solutions. For figure \ref{fig:10_cities}, all evolutionary algorithms find a higher spread of solutions or a lower value than the branch and cut algorithm.
 \\\\
-For large problems, the spread of solutions becomes much less, with the highest IQR found in figure \ref{fig:15_cities} by the C-TAEA algorithm. NSGA-II also finds a high solution spread for the average land usage objective. For figure \ref{fig:20_cities}, a much lower IQR for all evolutionary algorithms exists, with NSGA-II finding the lowest average cost across all the different evolutionary algorithms. In addition, NSGA-III finds three very high outliers across all three objectives. In figure \ref{fig:25_cities}, the spread of the solutions starts to increase again, with the IQR being very similar across all three objectives for all algorithms. Interestingly, there are many trade-offs across all of the evolutionary algorithms, with many being better in two objectives but one objective being worse than all the other algorithms.
+For large problems, the spread of solutions stays the same with, with the highest IQR found in figure \ref{fig:15_cities} by the C-TAEA algorithm. NSGA-II also finds a high solution spread for the average land usage objective. For figure \ref{fig:20_cities}, a much lower IQR for all evolutionary algorithms exists, with NSGA-II finding the lowest average cost across all the different evolutionary algorithms. In addition, NSGA-III finds three very high outliers across all three objectives. In figure \ref{fig:25_cities}, the spread of the solutions starts to increase again, with the IQR being very similar across all three objectives for all algorithms. Interestingly, there are many trade-offs across all of the evolutionary algorithms, with many being better in two objectives but one objective being worse than all the other algorithms.
 Figure \ref{fig:30_cities} displays a small spread of solutions, as also seen in figure \ref{fig:20_cities}. NSGA-II shows the smallest spread, finding the minimum solutions over all the objectives and having the lowest average solution value for three objectives. Furthermore, NSGA-II does not have many high outliers, with the highest amount of outliers found by U-NSGA-III and C-TAEA, respectively.
 \\\\
 For the 40 city problem, in figure \ref{fig:40_cities}, the NSGA-III, C-TAEA, and U-NSGA-III algorithms, to stay in the feasible region, start to select a lot of landfill facilities, which induces a very high land usage. NSGA-II still finds the minimum across all three objectives. Furthermore, the IQR of the solutions found by NSGA-II are all low enough to be minimal solutions for the other algorithms. U-NSGA-III, NSGA-III, and C-TAEA have the highest spread of solutions according to figure \ref{fig:40_cities}.
